welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:25: error: value unary_! is not a member of Int
	     	if(!getX()==6){
                   ^